further fix mobile time jumping

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -95,7 +95,7 @@ p.hero__subtext--gray {
 .countdown {
   text-align: center;
   margin-top: 32px;
-  width: 95%;
+  width: 80%;
 }
 
 .countdown__emphasis {
@@ -110,7 +110,7 @@ p.hero__subtext--gray {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 56px;
+  margin-top: 48px;
 }
 
 @media screen and (max-width: 1100px) {
